<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- icon -->
    <item
        android:id="@+id/menuRefresh"
        android:icon="@drawable/ic_menu_refresh_holo_light"
        android:showAsAction="always|collapseActionView"/>

    <!-- icon + text -->
    <item
        android:id="@+id/menuOption1"
        android:icon="@drawable/content_edit"
        android:showAsAction="ifRoom|withText|collapseActionView"
        android:title="@string/menuOption1"/>

    <!-- icon -->
    <item
        android:id="@+id/menuOption2"
        android:icon="@drawable/content_discard"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menuOption2"/>

    <!-- text -->
    <item
        android:id="@+id/menuOption3"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menuOption3"/>

    <!-- Navigation submenu -->
    <item
        android:id="@+id/menuSubMenu"
        android:title="@string/menuOption4"
        android:showAsAction="collapseActionView">
        <menu>
            <group
                android:id="@+id/menuSubGroup"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menuSub1"
                    android:checked="true"
                    android:title="@string/menuSub1"/>
                <item
                    android:id="@+id/menuSub2"
                    android:title="@string/menuSub2"/>
                <item
                    android:id="@+id/menuSub3"
                    android:title="@string/menuSub3"/>
            </group>
        </menu>
    </item>

</menu>